Correct .moreIndicator vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-	bottom: 60px;
+	top: 330px;
 	left: 300px;
 }
 
